# dots_n_boxes

./: .gitignore  Makefile  README.md  Visualization.py  deploy.sh  flake.nix  shell.nix  test.py  webserver.py  webserver2.py
docs/Visualization/: .$mapping_top_right.svg.bkp  .$mapping_top_rightsvg.bkp
lib/: cell_pos.py  enums.py  mapper.py  side.py  test_mapper.py
main/: GameLogic.cpp  Visualization.cpp  main.ino  some.cpp
py/: cell_pos.py  deploy.sh  enums.py  game_logic.py  main.py  side.py  test_side.py
src/: CMakeLists.txt  Makefile  tests
src/main/: Countdown.cpp  GameLogic.cpp  main.ino
src/test/: CellPos.test.cpp  GameLogic.test.cpp
